# cuda_project

./: LICENSE  README.md  README.txt  useful_links.md
sift_parallel/: CMakeLists.txt
sift_parallel/driver_code/: CMakeLists.txt  compare_serial_parallel.cpp  serial_and_parallel.cpp  time_all.cpp
sift_parallel/examples/: find_keypoints.cpp  match_features.cpp
sift_parallel/src/: CMakeLists.txt  gaussian_kernels.cu  histogram_kernels.cu  image.cpp  sift.cu  sift.hpp
sift_parallel/timing_scripts/: CMakeLists.txt  serial_and_parallel_timing.cpp
sift_serial/: CMakeLists.txt
sift_serial/src/: sift.cpp
test/: Makefile  check_gpu  check_gpu.cu
